--- a/wp-content/themes/municipio-nsr/assets/source/sass/materializecss/_color.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/materializecss/_color.scss
@@ -55,7 +55,7 @@ $pink: (
 );
 
 $purple: (
-  "base":       #9c27b0,
+  "base":       #52439f,
   "lighten-5":  #f3e5f5,
   "lighten-4":  #e1bee7,
   "lighten-3":  #ce93d8,
