--- a/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
@@ -1,6 +1,7 @@
 html  {
     /*background: $black; //Fixes issues of color in footer, when page is to "short".*/
-
+    overflow-x:hidden !important;
+    overflow-y: auto;
 }
 .sticky {
     top: 0;
