--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_header.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_header.scss
@@ -1,3 +1,4 @@
+
 .site-header {
     z-index: 998;
     position:relative;
@@ -5,10 +6,25 @@
     border-bottom: $palette-primary-green 15px solid;
     height:100px;
     #nsr-logo .desk-logo{
-        position: absolute;
-        top: -40px;
-        width: 149px;
+        height: 50px;
+        position: Absolute;
+        top: -36px;
+        left:50px;
+        @media screen and (max-width: 1416px) and (min-width: 1020px) {
+            left:118px;
+            top:-20px;
+        }
+        svg {
+            max-width: 170px;
+            @media screen and (max-width: 1416px) and (min-width: 1020px) {
+                max-width: 140px;
+            }
+        }
+        @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+            top: -55px;
+        }
     }
+
     &.color-foretag {
         border-bottom: $palette-primary-red 15px solid;
     }
@@ -16,8 +32,20 @@
         border-bottom: $palette-primary-mint 15px solid;
     }
     .container {
+        //position:absolute;
+        //bottom:0px;
+    }
+    .desk-position {
         position:absolute;
-        bottom:0px;
+
+        left: -100px;
+        top: 20px;
+        .ie-fix {
+            height:71px;
+            width:auto;
+            padding-bottom:20px;
+            margin-bottom:10px;
+        }
     }
 }
 
@@ -28,8 +56,8 @@
 }
 
 .site-header > .container {
-    padding: 0px 0;
-    padding-bottom:0px;
+    //padding: 0px 0;
+    //padding-bottom:0px;
 }
 .site-header .grid {
     padding-bottom:0px;
@@ -45,6 +73,7 @@
 .side-nav .quickSearch {
     display: none;
 }
+
 
 
 
