--- a/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
+++ b/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
@@ -321,7 +321,7 @@ input[type=text]:focus.invalid {
     }
 
     .input-field input[type=search]:focus {
-        color: black;
+        //color: black;
     }
 
     .prefix {
@@ -345,6 +345,9 @@ input[type=text]:focus.invalid {
         font-weight: 600;
         color: grey !important;
         left: 60px;
+        @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+
+        }
     }
 
     .input-field input[type=search] + label.active {
@@ -363,21 +366,13 @@ input[type=text]:focus.invalid {
     }
 
     input[type=search].form-control-lg {
-        font-size: 2.0em;
-        padding-top: 1.2rem;
-        /* Midnight hack .... :-/ */
-        @media (min-width: 2320px) {
-            //width: calc(98% - 5rem) !important;
-        }
-        @media (min-width: 1770px) {
-            //width: calc(98% - 6rem) !important;
+        font-size: 24px !important;
+        padding-top: 17.5px;
+
+        @media (max-width: 580px) {
+            padding-top: 16.6px;
         }
 
-        //width: calc(98% - 6.5rem) !important;
-
-        @media (max-width: 500px) {
-            //width: calc(98% - 7rem) !important;
-        }
 
     }
 
@@ -387,6 +382,9 @@ input[type=text]:focus.invalid {
             //margin-right:0px;
             font-size: 1.2em;
         }
+    }
+    @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+
     }
 
     #searchResult {
@@ -472,22 +470,39 @@ input[type=text]:focus.invalid {
 
     ::-webkit-input-placeholder {
         /* Chrome/Opera/Safari */
-        color: $white !important;
+        color: #8a8a8a !important;
+        font-size:24px;
+        @media (max-width: 580px) {
+            font-size:18px;
+        }
     }
 
     ::-moz-placeholder {
         /* Firefox 19+ */
-        color: $white !important;
+        color: #8a8a8a !important;
+        font-size:24px;
+        @media (max-width: 580px) {
+            font-size:15px;
+        }
+
     }
 
     :-ms-input-placeholder {
         /* IE 10+ */
-        color: $white !important;
+        color: #8a8a8a !important;
+        font-size:24px;
+        @media (max-width: 580px) {
+            font-size:15px;
+        }
     }
 
     :-moz-placeholder {
         /* Firefox 18- */
-        color: $white !important;
+        color: #8a8a8a !important;
+        font-size:24px;
+        @media (max-width: 580px) {
+            font-size:15px;
+        }
     }
 
     .relative {
