Left over fixed
Work in progress

--- a/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
+++ b/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
@@ -1617,8 +1617,12 @@ tr {
 }
 
 .deskHide, .expand-sortCell {
-    // display: none !important;
+    display: none !important;
 
+}
+
+.deskHideFraction {
+    margin-right: 5px;
 }
 
 .meta-fraktion div {
