--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_header.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_header.scss
@@ -84,6 +84,7 @@
         height: 120px;
         border-bottom: none;
         min-height: 120px;
+        position: relative !important;
         .desk-logo {
             display:none;
         }
