--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_navigation.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_navigation.scss
@@ -424,6 +424,7 @@
     right: 30px;
     top: 30px;
     @media (max-width: 1005px) {
+        position: fixed;
         top: 14px;
     }
     z-index: 999;
