--- a/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
+++ b/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
@@ -1024,6 +1024,9 @@ input[type=text]:focus.invalid {
         @media (max-width: 767px) {
             .fp-address {
                 max-height: 70px;
+                span, b {
+                    text-transform: capitalize;
+                }
             }
             .expand-avfall {
                 display: block;
@@ -1172,7 +1175,7 @@ input[type=text]:focus.invalid {
         content: '\e88e' !important;
         @media (max-width: 1000px) {
             b {
-                vertical-align: top;
+                vertical-align: top !important;
             }
         }
     }
