Fixed remaining issues
Work in progress

--- a/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
+++ b/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
@@ -1001,6 +1001,11 @@ input[type=text]:focus.invalid {
             font-size: 1.4rem;
         }
 
+        .fp-adress {
+            span, b {
+                text-transform: capitalize;
+            }
+        }
         .align-right {
             text-align: right;
             @media (max-width: 767px) {
@@ -1173,11 +1178,6 @@ input[type=text]:focus.invalid {
     .exnfodispl:before {
         font-family: 'Material Icons';
         content: '\e88e' !important;
-        @media (max-width: 1000px) {
-            b {
-                vertical-align: top !important;
-            }
-        }
     }
 
     .fraktion-icon-home:before {
@@ -1865,6 +1865,7 @@ tr {
         .sortAs li {
             &::before {
                 padding-left: 10px;
+                vertical-align: top !important;
             }
 
             div {
