--- a/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
+++ b/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
@@ -1001,7 +1001,7 @@ input[type=text]:focus.invalid {
             font-size: 1.4rem;
         }
 
-        .fp-adress {
+        .fp-address {
             span, b {
                 text-transform: capitalize;
             }
