Aligning "Bra att veta"
Fixed missaligned text on ipad and phones

--- a/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
+++ b/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
@@ -1865,7 +1865,9 @@ tr {
         .sortAs li {
             &::before {
                 padding-left: 10px;
-                vertical-align: top !important;
+                b {
+                    vertical-align: top !important;
+                }
             }
 
             div {
