--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
@@ -403,7 +403,9 @@ div.wpforms-container-full .wpforms-form .wpforms-field-label {
   }
   @media (max-width: 800px) {
     .sites-nav {
-      display:none !important;
+      // display:none !important;
+      position: relative;
+      top: 40px; 
     }
     .mob, .mobile-nav {
       display:block !important;
