Fixed typo in "bra att veta"-alignment

--- a/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
+++ b/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
@@ -994,7 +994,7 @@ input[type=text]:focus.invalid {
 
     @media (max-width: 1005px) {
         .exnfodispl {
-            ::before {
+            &::before {
                 vertical-align: top;
             }
             b {
