--- a/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
+++ b/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
@@ -1911,6 +1911,9 @@ tr {
 .cursor-pointer {
     cursor:pointer;
 }
-
-
+.vc_col-sm-12.ftinfo {
+    font-size: 0.8rem;
+    line-height: 1.5;
+    padding: 10px;
+}
 
