--- a/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
+++ b/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
@@ -1017,10 +1017,10 @@ input[type=text]:focus.invalid {
                 text-transform: capitalize;
             }
             @media (min-width: 768px) and (max-width: 803px) {
-                width: auto;
+                width: 40%;
             }
             @media (min-width: 803px) and (max-width: 1216px) {
-                width: auto;
+                width: 55%;
             }
         }
         .align-right {
@@ -1082,11 +1082,11 @@ input[type=text]:focus.invalid {
                 }
             }
             @media (min-width: 768px) and (max-width: 803px) {
-                width: auto;
+                width: 60%;
                 float: right;
             }
             @media (min-width: 803px) and (max-width: 1216px) {
-                width: auto;
+                width: 45%;
                 float: right;
             }
 
